<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@android:drawable/ic_delete" />

        <EditText
            android:id="@+id/norbinEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="01-"
            android:inputType="numberSigned"
            android:hint="@string/bin"
            android:autofillHints="@string/bin"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/zmEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="01"
            android:inputType="number"
            android:hint="@string/zm"
            android:autofillHints="@string/zm"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/oblDwoj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/button" />

        <EditText
            android:id="@+id/uoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="01"
            android:inputType="number"
            android:hint="@string/uo"
            android:autofillHints="@string/uo"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/utEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="01"
            android:inputType="number"
            android:hint="@string/ut"
            android:autofillHints="@string/ut"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>